Update to current web addresses.

--- a/McsaMeetsMailer/wwwroot/templates/FullScheduleEmailTemplate.html
+++ b/McsaMeetsMailer/wwwroot/templates/FullScheduleEmailTemplate.html
@@ -115,9 +115,9 @@
 			  
       <p><b>DMG</b> - A monthly meet of trad climbers with partners pushing their grades & then slaking their thirst, but other climbers are welcome to come along to the venue for the camaraderie.</p>
 			  
-      <p><b>UPDATES</b> - Check the newsletter and website for changes and for details of new meets. The latest Meet Sheet can be viewed on the club's website at https://mcsa-kzn-meets.azurewebsites.net/Meets or http://kzn.mcsa.org.za/meets</p>
+      <p><b>UPDATES</b> - Check the newsletter and website for changes and for details of new meets. The latest Meet Sheet can be viewed on the club's website at <a href="https://mcsa-kzn-meets.azurewebsites.net/Meets">https://mcsa-kzn-meets.azurewebsites.net/Meets</a>.</p>
 			  
-      <p><b>CAMBALALA HUT</b> - Booking calendar on-line (http://kzn.mcsa.org.za/Resources/cambalala-hut) or Clem Robins at clemnolarobins@gmail.com</p>
+      <p><b>CAMBALALA HUT</b> - Booking calendar on-line (<a href="https://www.mcsakzn.co.za/about/cambalala-hut/">https://www.mcsakzn.co.za/about/cambalala-hut/</a>) or Clem Robins at clemnolarobins@gmail.com</p>
 
       <p><b>GUIDE TO MEET LEADERS</b> - Meet Leaders please note the Guide to Meet Leaders and Indemnity Form on the MCSA KZN website.</p>
 
