Update template footer.

--- a/McsaMeetsMailer/wwwroot/templates/FullScheduleEmailTemplate.html
+++ b/McsaMeetsMailer/wwwroot/templates/FullScheduleEmailTemplate.html
@@ -105,23 +105,21 @@
     <div style="font-size: small; text-align: left; margin: 0px auto; width: 70%; padding-top: 20px;">
       <p><b>GRADES</b> - Where a Berg or other climbing meet has been allocated a grade 1, 2 or 3 as well as the usual R, this means that non-climbers are most welcome as hikers on the meet.</p>
 
-      <p><b>BACK-UP MEET LEADERS</b> - When unable to take their meet, the meet leader should have contact details of a backup leader.</p>
+      <p><b>IMPROMPTU MEETS</b> - May be arranged at short notice and the details will be shared on the Ah Hoc Hike &amp; Climb Whatsapp group.</p>
 
-      <p><b>IMPROMPTU MEETS</b> - May be arranged at short notice and the details will be distributed by email, on the website and in the newsletter if time permits. Be sure that you are on the Google-mail list for MCSA members to receive notice of the many short notice meets (contact kzn.mcsa.comm@gmail.com).</p>
-			  
-      <p><b>ADDITIONAL MEETS</b> - Please advise Clem Robins of your plans for a meet which you are prepared to arrange/lead and it will be added to this or the appropriate future Meet Sheet.</p>
-			  
-      <p><b>MONTHLY ADVENTURE TALKS & SOCIAL EVENINGS</b> - If you know of someone who has interesting slides to show on hiking, climbing or travelling please contact Ian Bailey (Pietermaritzburg) 083 269 6201, ianbailey@telkomsa.net, or Neil Williamson (Durban) 0836589494, dendro-p@hotmail.com.</p>
-			  
+      <p><b>NEW MEETS</b> - Please advise Clem Robins of your plans for a meet which you are prepared to arrange/lead and it will be added to the Meet Sheet.</p>
+
+      <!--<p><b>MONTHLY ADVENTURE TALKS & SOCIAL EVENINGS</b> - If you know of someone who has interesting slides to show on hiking, climbing or travelling please contact ...</p>-->
+
       <p><b>DMG</b> - A monthly meet of trad climbers with partners pushing their grades & then slaking their thirst, but other climbers are welcome to come along to the venue for the camaraderie.</p>
-			  
-      <p><b>UPDATES</b> - Check the newsletter and website for changes and for details of new meets. The latest Meet Sheet can be viewed on the club's website at <a href="https://mcsa-kzn-meets.azurewebsites.net/Meets">https://mcsa-kzn-meets.azurewebsites.net/Meets</a>.</p>
-			  
-      <p><b>CAMBALALA HUT</b> - Booking calendar on-line (<a href="https://www.mcsakzn.co.za/about/cambalala-hut/">https://www.mcsakzn.co.za/about/cambalala-hut/</a>) or Clem Robins at clemnolarobins@gmail.com</p>
+
+      <p><b>MCP CLIMBERS</b> - Tuesday climbers group - contact Bruce Sobey (083 440 6753).</p>
+
+      <p><b>UPDATES</b> - The latest Meet Sheet can be viewed on the club's website at <a href="https://mcsa-kzn-meets.azurewebsites.net/Meets">https://mcsa-kzn-meets.azurewebsites.net/Meets</a>.</p>
+
+      <p><b>CAMBALALA HUT</b> - Booking calendar on-line (<a href="https://www.mcsakzn.co.za/about/cambalala-hut/">https://www.mcsakzn.co.za/about/cambalala-hut/</a>) or Clem Robins at <a href="mailto:clemnolarobins@gmail.com">clemnolarobins@gmail.com</a></p>
 
       <p><b>GUIDE TO MEET LEADERS</b> - Meet Leaders please note the Guide to Meet Leaders and Indemnity Form on the MCSA KZN website.</p>
-
-      <p><b>CLIMBING ON TUESDAYS</b> - Contact Bruce Sobey, 083 440 6753.</p>
 
       <p><b><span style="color: red;">DISCLAIMER</span></b> - Hiking and climbing in mountainous areas are potentially hazardous activities. Participation in MCSA meets is at your own risk. It is your own responsibility to be properly equipped with adequate food, clothing, footwear, sleeping bag, shelter and maps. The club and the meet leaders cannot be held liable for any injuries or mishaps whatsoever. An Indemnity Form is available for leaders use.</p>
     </div>
