--- a/McsaMeetsMailer/wwwroot/templates/FullScheduleEmailTemplate.html
+++ b/McsaMeetsMailer/wwwroot/templates/FullScheduleEmailTemplate.html
@@ -105,7 +105,7 @@
     <div style="font-size: small; text-align: left; margin: 0px auto; width: 70%; padding-top: 20px;">
       <p><b>GRADES</b> - Where a Berg or other climbing meet has been allocated a grade 1, 2 or 3 as well as the usual R, this means that non-climbers are most welcome as hikers on the meet.</p>
 
-      <p><b>IMPROMPTU MEETS</b> - May be arranged at short notice and the details will be shared on the Ah Hoc Hike &amp; Climb Whatsapp group.</p>
+      <p><b>IMPROMPTU MEETS</b> - May be arranged at short notice and the details will be shared on the Ad Hoc Hike &amp; Climb Whatsapp group.</p>
 
       <p><b>NEW MEETS</b> - Please advise Clem Robins of your plans for a meet which you are prepared to arrange/lead and it will be added to the Meet Sheet.</p>
 
