--- a/McsaMeetsMailer/Pages/MeetSheetEmailPreview.cshtml
+++ b/McsaMeetsMailer/Pages/MeetSheetEmailPreview.cshtml
@@ -3,16 +3,6 @@
 @{
   ViewData["Title"] = "Email Preview";
 
-  // TODO: Pull this from config.
-  // NOTE: This is duplicated in SendEmail.cshtml
-  const string defaultBody =
-    "Hi\n\n" +
-    "Please find the latest MCSA-KZN Meet Sheet below.\n\n" +
-    "Queries specific to a particular Meet should be directed to the Meet Leader.\n\n" +
-    "Please do not reply to this email as the address is not monitored.\n\n" +
-    "Yours in adventure,\n" +
-    "The Mountain Club of South Africa, KwaZulu-Natal Section.";
-
   string allTimeFormatted = DateTime.Now.AddYears(10).ToString("yyyy/MM/dd");
 }
 
@@ -20,7 +10,7 @@
   <label class="label label-default">Email Subject</label>
   <input id="emailSubject" type="text" class="form-control input-sm" maxlength="64" value="MCSA-KZN Meet Sheet" />
   <label class="label label-default">Email Body</label>
-  <textarea id="emailBody" class="form-control input-sm" rows="3" maxlength="512">@Html.Raw(defaultBody)</textarea>
+  <textarea id="emailBody" class="form-control input-sm" rows="3" maxlength="512">@Html.Raw(BusinessLogic.EmailConstants.DefaultBody)</textarea>
 </div>
 
 <div class="container">
@@ -110,7 +100,7 @@
     sendStatus.value = 'Sending...';
 
     $.ajax({
-      url: 'api/email/sendFullScheduleToAddress',
+      url: 'api/email/sendToAddress',
       data: getSerialisedEmailContentModel(),
       type: 'POST',
       contentType: 'application/json',
@@ -140,7 +130,7 @@
     sendStatus.value = 'Sending...';
 
     $.ajax({
-      url: 'api/email/sendFullScheduleToAll',
+      url: 'api/email/sendToAll',
       data: getSerialisedEmailContentModel(),
       type: 'POST',
       contentType: 'application/json',
