--- a/McsaMeetsMailer/wwwroot/templates/FullScheduleEmailTemplate.html
+++ b/McsaMeetsMailer/wwwroot/templates/FullScheduleEmailTemplate.html
@@ -8,7 +8,7 @@
   <p style="display: {OnlineScheduleDisplayStyle}; font-weight: bold;">Printer friendly version <a href="{OnlineScheduleUrl}?printerFriendly">here</a>.</p>
 
   <br style="display: {OnlineScheduleDisplayStyle};">
-  
+
   <div style="padding-top: 10px; padding-bottom: 20px; display: {HeaderAndFooterImageVisibility};">
     <img src="https://mcsa-kzn-meets.azurewebsites.net/images/header.jpg" style="max-height: 150px; margin: auto;" />
   </div>
@@ -50,14 +50,14 @@
         </td>
       </tr>
     </table>
-    
+
     <div style="font-size: small; text-align: center; margin: 0px auto; width: 70%;">
       <p>Meet Grades range from <b>1</b> (easy walk) to <b>5</b> (serious 'Berg pass), <b>R</b> indicates rock-climbing.</p>
       <p>For example, 3R could describe a meet involving a moderate hike and rock-climbing (which may be an optional activity).</p>
     </div>
 
     <h3 style="text-align: center; padding-top: 10px;">Meet Details</h3>
-    
+
     <!--Details-->
     <a id="{Anchor}" style="text-decoration: none; color: black;">
       <table style="table-layout: fixed; border-collapse: collapse; border-spacing: 0; border: 1px solid #F0F0F0; margin: 0px auto; width: 100%;">
@@ -101,11 +101,11 @@
         </tr>
       </table>
     </a>
-    
+
     <div style="font-size: small; text-align: left; margin: 0px auto; width: 70%; padding-top: 20px;">
       <p><b>GRADES</b> - Where a Berg or other climbing meet has been allocated a grade 1, 2 or 3 as well as the usual R, this means that non-climbers are most welcome as hikers on the meet.</p>
 
-      <p><b>IMPROMPTU MEETS</b> - May be arranged at short notice and the details will be shared on the Ad Hoc Hike &amp; Climb Whatsapp group.</p>
+      <p><b>IMPROMPTU MEETS</b> - May be arranged at short notice and the details will be shared on the club Whatsapp group.</p>
 
       <p><b>NEW MEETS</b> - Please advise Clem Robins of your plans for a meet which you are prepared to arrange/lead and it will be added to the Meet Sheet.</p>
 
