Link mcsa page for grade info.

--- a/McsaMeetsMailer/wwwroot/templates/FullScheduleEmailTemplate.html
+++ b/McsaMeetsMailer/wwwroot/templates/FullScheduleEmailTemplate.html
@@ -53,7 +53,7 @@
 
     <div style="font-size: small; text-align: center; margin: 0px auto; width: 70%;">
       <p>Meet Grades range from <b>1</b> (easy walk) to <b>5</b> (serious 'Berg pass), <b>R</b> indicates rock-climbing.</p>
-      <p>For example, 3R could describe a meet involving a moderate hike and rock-climbing (which may be an optional activity).</p>
+      <p>Click <a href="https://www.mcsakzn.co.za/events/meet-sheet/" target="_blank">here</a> for more information.</p>
     </div>
 
     <h3 style="text-align: center; padding-top: 10px;">Meet Details</h3>
@@ -103,7 +103,7 @@
     </a>
 
     <div style="font-size: small; text-align: left; margin: 0px auto; width: 70%; padding-top: 20px;">
-      <p><b>GRADES</b> - Where a Berg or other climbing meet has been allocated a grade 1, 2 or 3 as well as the usual R, this means that non-climbers are most welcome as hikers on the meet.</p>
+      <p><b>GRADES</b> - Click <a href="https://www.mcsakzn.co.za/events/meet-sheet/" target="_blank">here</a> for more information.</p>
 
       <p><b>IMPROMPTU MEETS</b> - May be arranged at short notice and the details will be shared on the club Whatsapp group.</p>
 
